tests/errors/unhashable_dict_key.py
# expect_error: unhashable type
print({[1, 2]: 3})